--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -51,5 +51,6 @@
 @import "components/titles";
 @import "components/no-slider";
 @import "components/pages";
+@import "components/social-share";
 @import "components/clearfix";
 @import "responsive";
