Updating Theme for course

--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -52,5 +52,6 @@
 @import "components/no-slider";
 @import "components/pages";
 @import "components/social-share";
+@import "components/course";
 @import "components/clearfix";
 @import "responsive";
