--- a/resources/assets/sass/components/_course.scss
+++ b/resources/assets/sass/components/_course.scss
@@ -15,7 +15,7 @@
     .info {
       padding: 20px;
       .title {
-        margin: 0 0 10px 0;
+        margin: 10px 0;
         padding: 0;
         font-size: 20px;
         letter-spacing: -0.01em;
